--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
+    "redux": "^4.0.4",
     "slick-carousel": "^1.8.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
