--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bootstrap": "^4.3.1",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
+    "material-icons-react": "^1.0.4",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
+    "react-translate": "^7.0.1",
     "redux": "^4.0.4",
     "slick-carousel": "^1.8.1",
     "webpack": "^4.41.2",
@@ -32,6 +34,7 @@
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
