--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-icons-react": "^1.0.4",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-countup": "^4.2.3",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
