--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "material-icons-react": "^1.0.4",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-countup": "^4.2.3",
     "react-dom": "^16.11.0",
+    "react-odometerjs": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
@@ -26,9 +26,7 @@
     "react-youtube": "^7.9.0",
     "redux": "^4.0.4",
     "slick-carousel": "^1.8.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-cli": "^2.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -44,6 +42,8 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "svg-inline-loader": "^0.8.0",
-    "url-loader": "^2.2.0"
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0"
   }
 }
