dropdown added in react

--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "material-icons-react": "^1.0.4",
+    "mdbreact": "^4.22.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-select": "^0.14.0",
     "react-dom": "^16.11.0",
     "react-odometerjs": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
     "react-translate": "^7.0.1",
     "react-youtube": "^7.9.0",
