package.json updated

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot --host 0.0.0.0 --port 8081 --disable-host-check",
-    "build": "webpack --model production"
+    "build": "webpack --model production",
+    "watch":""
   },
   "author": "",
   "license": "ISC",
