--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
