--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@axetroy/react-download": "^1.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
+    "js-file-download": "^0.4.8",
     "material-icons-react": "^1.0.4",
     "mdbreact": "^4.22.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-select": "^0.14.0",
+    "react-burger-menu": "^2.6.11",
     "react-dom": "^16.11.0",
+    "react-leaflet": "^2.5.0",
     "react-odometerjs": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
