--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "js-file-download": "^0.4.8",
+    "leaflet": "^1.5.1",
     "material-icons-react": "^1.0.4",
     "mdbreact": "^4.22.0",
     "react": "^16.11.0",
@@ -26,6 +27,7 @@
     "react-dom": "^16.11.0",
     "react-leaflet": "^2.5.0",
     "react-odometerjs": "^2.1.1",
+    "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
