--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.4.1",
     "js-file-download": "^0.4.8",
     "leaflet": "^1.5.1",
+    "leaflet.vectorgrid": "^1.3.0",
     "material-icons-react": "^1.0.4",
     "mdbreact": "^4.22.0",
     "react": "^16.11.0",
