--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@axetroy/react-download": "^1.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-daterangepicker": "^3.0.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "js-file-download": "^0.4.8",
@@ -22,10 +23,15 @@
     "leaflet.vectorgrid": "^1.3.0",
     "material-icons-react": "^1.0.4",
     "mdbreact": "^4.22.0",
-    "react": "^16.11.0",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-bootstrap-select": "^0.14.0",
     "react-burger-menu": "^2.6.11",
+    "react-date-range": "^0.9.4",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.11.0",
     "react-leaflet": "^2.5.0",
     "react-odometerjs": "^2.1.1",
