--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
+    "react-share": "^3.0.1",
     "react-slick": "^0.25.2",
     "react-translate": "^7.0.1",
     "react-youtube": "^7.9.0",
