--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "react-dom": "^16.11.0",
     "react-leaflet": "^2.5.0",
     "react-lines-ellipsis": "^0.14.1",
+    "react-modal-image": "^2.5.0",
     "react-odometerjs": "^2.1.1",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
     "react-share": "^3.0.1",
+    "react-show-more": "^2.0.0",
     "react-slick": "^0.25.2",
     "react-toastify": "^5.4.1",
     "react-translate": "^7.0.1",
