--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-icons-react": "^1.0.4",
     "mdbreact": "^4.22.0",
     "moment": "^2.24.0",
+    "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.14",
