--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-date-range": "^0.9.4",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.11.0",
+    "react-image-lightbox-rotate": "^1.2.0",
     "react-leaflet": "^2.5.0",
+    "react-lightbox-component": "^1.2.1",
     "react-lines-ellipsis": "^0.14.1",
     "react-modal-image": "^2.5.0",
     "react-odometerjs": "^2.1.1",
