--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.11.0",
     "react-image-lightbox-rotate": "^1.2.0",
+    "react-image-pan-zoom-rotate": "^1.3.0",
     "react-leaflet": "^2.5.0",
     "react-lightbox-component": "^1.2.1",
     "react-lines-ellipsis": "^0.14.1",
