--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-select": "^3.0.8",
     "react-share": "^3.0.1",
     "react-show-more": "^2.0.0",
+    "react-show-more-text": "^1.3.0",
     "react-slick": "^0.25.2",
     "react-toastify": "^5.4.1",
     "react-translate": "^7.0.1",
