--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-select": "^3.0.8",
     "react-share": "^3.0.1",
     "react-show-more": "^2.0.0",
