--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet.vectorgrid": "^1.3.0",
     "material-icons-react": "^1.0.4",
     "mdbreact": "^4.22.0",
+    "mkdirp": "^0.5.1",
     "moment": "^2.24.0",
     "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.7.2",
