--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.4.1",
     "js-file-download": "^0.4.8",
     "leaflet": "^1.5.1",
+    "leaflet-ajax": "^2.1.0",
     "leaflet.markercluster": "^1.4.1",
     "leaflet.vectorgrid": "^1.3.0",
     "material-icons-react": "^1.0.4",
