--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-file-download": "^0.4.8",
     "leaflet": "^1.5.1",
     "leaflet-ajax": "^2.1.0",
+    "leaflet-extra-markers": "^1.2.1",
     "leaflet.markercluster": "^1.4.1",
     "leaflet.vectorgrid": "^1.3.0",
     "material-icons-react": "^1.0.4",
