--- a/package.json
+++ b/package.json
@@ -13,71 +13,71 @@
   "dependencies": {
     "@ansur/leaflet-pulse-icon": "^0.1.1",
     "@axetroy/react-download": "^1.1.1",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.4.1",
-    "bootstrap-daterangepicker": "^3.0.5",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
+    "bootstrap-daterangepicker": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.4.1",
-    "leaflet": "^1.5.1",
+    "jquery": "^3.5.1",
+    "leaflet": "^1.7.1",
     "leaflet-ajax": "^2.1.0",
     "leaflet.markercluster": "^1.4.1",
     "leaflet.vectorgrid": "^1.3.0",
     "material-icons-react": "^1.0.4",
-    "mdbreact": "^4.22.0",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.24.0",
-    "perfect-scrollbar": "^1.4.0",
+    "mdbreact": "^4.27.0",
+    "mkdirp": "^0.5.5",
+    "moment": "^2.28.0",
+    "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-daterangepicker": "^4.1.0",
     "react-bootstrap-select": "^0.14.0",
-    "react-burger-menu": "^2.6.11",
-    "react-confirm-alert": "^2.4.1",
+    "react-burger-menu": "^2.7.1",
+    "react-confirm-alert": "^2.6.2",
     "react-date-range": "^0.9.4",
-    "react-datepicker": "^2.10.1",
-    "react-dom": "^16.11.0",
+    "react-datepicker": "^2.16.0",
+    "react-dom": "^16.13.1",
     "react-image-lightbox-rotate": "^1.2.0",
     "react-image-pan-zoom-rotate": "^1.3.0",
-    "react-leaflet": "^2.5.0",
+    "react-leaflet": "^2.7.0",
     "react-lightbox-component": "^1.2.1",
     "react-lines-ellipsis": "^0.14.1",
     "react-modal-image": "^2.5.0",
     "react-odometerjs": "^2.1.1",
-    "react-perfect-scrollbar": "^1.5.3",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
-    "react-select": "^3.0.8",
+    "react-select": "^3.1.0",
     "react-share": "^3.0.1",
     "react-show-more": "^2.0.0",
-    "react-show-more-text": "^1.3.0",
+    "react-show-more-text": "^1.4.4",
     "react-slick": "^0.25.2",
     "react-toastify": "^5.4.1",
     "react-translate": "^7.0.1",
-    "react-youtube": "^7.9.0",
-    "reactstrap": "^8.1.1",
+    "react-youtube": "^7.12.0",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.6.0",
     "file-loader": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "react-inlinesvg": "^1.1.7",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "svg-inline-loader": "^0.8.0",
+    "style-loader": "^1.2.1",
+    "svg-inline-loader": "^0.8.2",
     "url-loader": "^2.2.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.9.0"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
