--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "bootstrap-daterangepicker": "^3.1.0",
+    "dotenv-webpack": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.5.1",
     "leaflet": "^1.7.1",
@@ -67,6 +68,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.6.0",
+    "dotenv": "^8.2.0",
     "file-loader": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.0",
