--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
     "file-loader": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "react-inlinesvg": "^1.1.7",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "10.1.1",
     "style-loader": "^1.2.1",
     "svg-inline-loader": "^0.8.2",
     "url-loader": "^2.2.0",
